@@ -11,8 +11,6 @@ python-apport:
  - Add API/report attribute for doing upstream problem reports
  - support /etc/apport/blacklist.d/ for check_ignored(): one exe
    per line
- - mention system arch mismatch on Architecture: and alter default bug
-   title
 
 add firefox apport hook to suppress crash reports when restart is
 necessary
